imperative-tests/tests/collisions/variable_suffix.stderr
error: Opcode collides with other opdcode
 --> $DIR/variable_suffix.rs:8:17
  |
8 |     #[ opcode = "0xff_ff_vv" ]
  |                 ^^^^^^^^^^^^

error: Collides with this opcode
 --> $DIR/variable_suffix.rs:6:17
  |
6 |     #[ opcode = "0xff_ff_ff" ]
  |                 ^^^^^^^^^^^^
